REFACTOR: Tuist lInt 이슈 수정
수정 사항
- swiftlint.yml 내
included:
 - ${PROJECT_DIR}/Tuist_TCA
추가

"${PROJECT_DIR}/../../Tools/swiftlint" --config "${PROJECT_DIR}/Tuist_TCA/Resources/swiftlint.yml"
--config swiftlint.yml 위치
--path swiftlint.yml 폴더 위치

--- a/Projects/App/Tuist_TCA/Resources/swiftlint.yml
+++ b/Projects/App/Tuist_TCA/Resources/swiftlint.yml
@@ -3,12 +3,12 @@
 # https://realm.github.io/SwiftLint/rule-directory.html
 # 지우거나 추가하고싶으신게 있으면 하셔도 됩니다
 
-included:
-- Tuist_TCA
-
 # 비활성화 파일 목록 경로를 지정합니다.
 excluded:
-  - **/Sources
+
+included:
+ - ${PROJECT_DIR}/Tuist_TCA
+ - ${WORKSPACE_DIR}/Tuist
 
 # 비활성화 룰
 disabled_rules:
